--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Experience</title>
-<link rel="icon" href="SrivatsavLinkedIn.png">
+<link rel="icon" href="S.png">
 </head>
 <body>
 <h1>Hello World</h1>
