--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="icon" href="S.PNG">
+<title>Srivatsav Github</title>
 </head>
 <body>
 <h1>Hello World</h1>
