--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Srivatsav Github</title>
+	<title>Srivatsav Github</title>
+    <link rel="icon" href="S.PNG">
 </head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+	<h1>Hello World</h1>
+	<p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
 
