--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="S.PNG">
 </head>
 <body>
-	<h1>Hello World</h1>
+	<h1>Srivatsav Bendi</h1>
 	<p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
