--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Srivatsav Github</title>
+	<link rel="stylesheet" href="homeStyles.css">
+	<title>Computer Science Simplified</title>
     <link rel="icon" href="S.PNG">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-	<h1>Srivatsav Bendi</h1>
-	<p>I'm hosted with GitHub Pages.</p>
+	<div id=Menu> 
+		<span id=menuTitle>Computer Science Simplified</span>
+		<span class=menuItems>Artifical Intelligence</span>
+		<span class=menuItems>Algorithms</span>
+		<span class=menuItems>Architecture</span>
+        <span class=menuItems>Security</span>
+
+        <span class="logos"><a href="https://www.linkedin.com/in/srivatsav-bendi-ab99a5193/"><img border="0"alt="LinkedIn" src="linkedin.png" vertical-align="middle"></a></span>
+
+        <span class="logos"><a href="https://www.instagram.com/srivatsavbendi/"><img border="0" alt="Instagram" src="instagram.png" ></a></span>
+
+        <span class="logos"><a href="https://twitter.com/SrivatsavBendi"><img border="0" alt="Twitter" src="twitter.png" ></a></span>
+
+	</div>
+	<p>Every week or so, I discuss a new computer science concept. I go in depth about it's definition, application, scalibility, and conceptualization. Improve HTML graphics for this website. Take your time. Get 19 concepts before you actually release it! Make it one long page with different smaller sections. There should be oval information for each concept and there should be a directory at the top. Information about the website is at the top. Information about the author is at the bottom.  </p>
 </body>
 </html>
 
