--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<span class=menuItems>Architecture</span>
         <span class=menuItems>Security</span>
 
-        <span class="logos"><a href="https://www.linkedin.com/in/srivatsav-bendi-ab99a5193/"><img border="0"alt="LinkedIn" src="linkedin.png" vertical-align="middle"></a></span>
+        <span class="logos"><a href="https://www.linkedin.com/in/srivatsav-bendi-ab99a5193/"><img border="0"alt="LinkedIn" src="linkedin.png" ></a></span>
 
         <span class="logos"><a href="https://www.instagram.com/srivatsavbendi/"><img border="0" alt="Instagram" src="instagram.png" ></a></span>
 
