--- a/index.html
+++ b/index.html
@@ -9,25 +9,63 @@
 <body>
 	<div id=Banner> 
 		<div id=Title> 
-			<span id=menuTitle style="color: #9aa2ad;">Computer Science Simplified</span>
-			<span class="logos"><a href="https://www.linkedin.com/in/srivatsav-bendi-ab99a5193/"><img border="0"alt="LinkedIn" src="linkedin.png" ></a></span>
+			<span id=menuTitle style="color: #9aa2ad;"><strong>Computer Science Simplified</strong></span>
+			<span class="logos"><a href="https://www.linkedin.com/in/srivatsav-bendi-ab99a5193/"><img src="linkedin.png" ></a></span>
 
-        	<span class="logos"><a href="https://www.instagram.com/srivatsavbendi/"><img border="0" alt="Instagram" src="instagram.png" ></a></span>
+        	<span class="logos"><a href="https://www.instagram.com/srivatsavbendi/"><img src="instagram.png" ></a></span>
 
-        	<span class="logos"><a href="https://twitter.com/SrivatsavBendi"><img border="0" alt="Twitter" src="twitter.png" ></a></span>
+        	<span class="logos"><a href="https://twitter.com/SrivatsavBendi"><img src="twitter.png" ></a></span>
         </div>
         <div id=Menu>
-			<span class=menuItems style="color: #4285F4;" >Artifical Intelligence</span>
+			<span class=menuItems style="color: #4285F4;" ><a style="text-decoration:none" href="#hehe9">Artifical Intelligence</a></span>
 			<span class=menuItems style="color: #DB4437;" >Algorithms</span>
 			<span class=menuItems style="color: #F4B400;" >Architecture</span>
         	<span class=menuItems style="color: #0F9D58;" >Security</span>
+        	<span class=menuItems style="color: #FFFFFF;" >Author</span>
         </div>
     </div>
 
-        
+    <div class=sectors style='background-color: #4285F4'>
+    	<h1 class=headers style='background-color: #4285F4'> Simulated Annealing </h1>
+    	<div class=textView style='background-color: #4285F4'>
+    		<img class= images src="instagram.png" style='float: right;' style='background-color: #4285F4'  />
+			<p class= text style='background-color: #4285F4'>Eat fruits every day to get  yyour natural sugars Eat fruits every day to get  yyour natural sugarsEat fruits every day to get  yyour natural sugarsEat fruits every day to get  yyour natural sugarsEat fruits every day to get  yyour natural sugarsEat fruits every day to get  yyour natural sugarsEat fruits every day to get  yyour natural sugarsEat fruits every day to get  yyour natural sugarsEat fruits every day to get  yyour natural sugarsEat fruits every day to get  yyour natural sugars.......</p>
+    	</div>
+    </div>
 
-	</div>
-	<p>Every week or so, I discuss a new computer science concept. I go in depth about it's definition, application, scalibility, and conceptualization. Improve HTML graphics for this website. Take your time. Get 19 concepts before you actually release it! Make it one long page with different smaller sections. There should be oval information for each concept and there should be a directory at the top. Information about the website is at the top. Information about the author is at the bottom.  </p>
+    <div class=sectors style='background-color: #DB4437'>
+    	<h1 class=headers style='background-color: #DB4437'> Simulated Annealing </h1>
+    	<div class=textView style='background-color: #DB4437'>
+    		<img class= images src="instagram.png" style='float: right;' style='background-color: #DB4437'  />
+			<p class= text style='background-color: #DB4437'>Eat fruits every day to get  yyour natural sugars Eat fruits every day to get  yyour natural sugarsEat fruits every day to get  yyour natural sugarsEat fruits every day to get  yyour natural sugarsEat fruits every day to get  yyour natural sugarsEat fruits every day to get  yyour natural sugarsEat fruits every day to get  yyour natural sugarsEat fruits every day to get  yyour natural sugarsEat fruits every day to get  yyour natural sugarsEat fruits every day to get  yyour natural sugars.......</p>
+    	</div>
+    </div>
+
+    <div class=sectors style='background-color: #F4B400'>
+    	<h1 class=headers style='background-color: #F4B400'> Simulated Annealing </h1>
+    	<div class=textView style='background-color: #F4B400'>
+    		<img class= images src="instagram.png" style='float: right;' style='background-color: #F4B400'  />
+			<p class= text style='background-color: #F4B400'>Eat fruits every day to get  yyour natural sugars Eat fruits every day to get  yyour natural sugarsEat fruits every day to get  yyour natural sugarsEat fruits every day to get  yyour natural sugarsEat fruits every day to get  yyour natural sugarsEat fruits every day to get  yyour natural sugarsEat fruits every day to get  yyour natural sugarsEat fruits every day to get  yyour natural sugarsEat fruits every day to get  yyour natural sugarsEat fruits every day to get  yyour natural sugars.......</p>
+    	</div>
+    </div>
+
+    <div class=sectors style='background-color: #0F9D58'>
+    	<h1 class=headers style='background-color: #0F9D58'> Simulated Annealing </h1>
+    	<div class=textView style='background-color: #0F9D58'>
+    		<img class= images src="instagram.png" style='float: right;' style='background-color: #0F9D58'  />
+			<p class= text style='background-color: #0F9D58'>Eat fruits every day to get  yyour natural sugars Eat fruits every day to get  yyour natural sugarsEat fruits every day to get  yyour natural sugarsEat fruits every day to get  yyour natural sugarsEat fruits every day to get  yyour natural sugarsEat fruits every day to get  yyour natural sugarsEat fruits every day to get  yyour natural sugarsEat fruits every day to get  yyour natural sugarsEat fruits every day to get  yyour natural sugarsEat fruits every day to get  yyour natural sugars.......</p>
+    	</div>
+    </div>
+
+    <div class=sectors style='background-color: #000000'>
+    	<h1 class=headers style='background-color: #000000'> Srivatsav Bendi </h1>
+    	<div class=textView style='background-color: #000000'>
+    		<img class= images src="instagram.png" style='float: right;' style='background-color: #000000'  />
+			<p class= text style='background-color: #000000'>Eat fruits every day to get  yyour natural sugars Eat fruits every day to get  yyour natural sugarsEat fruits every day to get  yyour natural sugarsEat fruits every day to get  yyour natural sugarsEat fruits every day to get  yyour natural sugarsEat fruits every day to get  yyour natural sugarsEat fruits every day to get  yyour natural sugarsEat fruits every day to get  yyour natural sugarsEat fruits every day to get  yyour natural sugarsEat fruits every day to get  yyour natural sugars.......</p>
+    	</div>
+    </div>
+   
+	
 </body>
 </html>
 
