--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <div class=sector style='background-color: #212121'>
+    <div class=sectorMain style='background-color: #212121'>
           
       <span id=PEACETitle style='background-color: #212121'><a style="text-decoration:none" href="index.html"><i><strong> The Peace Syndicate </strong></i></a></span>
       
@@ -22,11 +22,13 @@
     </div>
 
 
-    <div id=BannerImage>
-
+    <div>
+      </div><div id=BannerImage></div>
+      <div class="textModeMain1"><i><b>EVERYTHING YOU NEED<br>IN ONE PLACE</b></i></div>
     </div>
 
-    <div class=sector1 style='background-color: #212121'>
+
+    <div class=Navsector1 style='background-color: #212121'>
       <div class="row">
         <div class="column">
           <img class="roundimage" src="picture1.jpg">
@@ -45,7 +47,7 @@
       </div>
     </div>
 
-    <div class=sector2 style='background-color: #212121'>
+    <div class=Navsector2 style='background-color: #212121'>
       <div class="row">
         <div class="column">
         <img class="roundimage" src="picture3.jpg" >
@@ -62,6 +64,27 @@
         <div class="textModes3"><i><b>PROGRAMS</b></i></div>
         </div>
       </div>
+    </div>
+
+    <!--  <div class=sectors style='background-color: #FFFFFF'>
+        <div class=sectortext style='background-color: #FFFFFF'>
+            <img class= sectorimages src="picture5.jpg" style='float: right;' style='background-color: #FFFFFF'  />
+            <p class= text style='background-color: #FFFFFF'> <strong> hi, my name is Srivatsav Bendi. </strong> As a freshman attending Troy High School, I've been dedicated to giving back to the community that has given me so much. During my time growing up in the Troy community, I have been highly involved in many clubs/activities: TSA, Economics, FIRST robotics, The Troy Colt Marching Band, and Science Olympiad. I have also fueled my passion for computer science with many innovative programming projects. This is a digital portfolio of my life and what I've been able to achieve so far. After viewing this website, you will hopefully have a better understanding of me as an individual.  
+            </p>
+        </div>
+    </div>
+-->
+
+
+    <div class=hisectors style='background-color: #212121'>
+        <div class=sector1 style='background-color: #203354'>
+          <h1 class= headers style='background-color: #203354'><i>EASY ACCESS TO 100+ ONLINE RESOURCES</i></h1>
+          <p class= interestingtext style='background-color: #203354'> With Project Future's user-friendly library of Free guides, books, and tips and tricks... Members are much more prepared to handle academics</p>
+          <p class= textlink style='background-color: #203354'> Learn More</p>
+        </div>
+        <div class=sector2 style='background-color: #ededed'>
+            <img class= interestingimages src="tv4k.png" style='background-color: #ededed'  />
+        </div>
     </div>
 
 
