--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@
     </div>
 
 
-    <div class=hisectors style='background-color: #3d6170'>
-        <div class=sector2 style='background-color: #3d6170'>
+    <div class=sectors style='background-color: #1c2e4a'>
+        <div class=sector2 style='background-color: #1c2e4a'>
             <img class= interestingimages src="dedicated.svg" style='background-color: #ededed'  />
         </div>
 
-        <div class=sector1 style='background-color: #3d6170'>
-          <h1 class= headers style='background-color: #3d6170'><i>GET INVOLVED</i></h1>
-          <p class= interestingtext style='background-color: #3d6170'> With our resources and guidance, you can easily start or join clubs/activities in your area</p>
-          <p class= textlink style='background-color: #3d6170'> Learn More</p>
+        <div class=sector1 style='background-color: #1c2e4a'>
+          <h1 class= headers style='background-color: #1c2e4a'><i>GET INVOLVED</i></h1>
+          <p class= interestingtext style='background-color: #1c2e4a'> With our resources and guidance, you can easily start or join clubs/activities in your area</p>
+          <p class= textlink style='background-color: #1c2e4a'>Learn More</p>
         </div>
 
         
