--- a/index.html
+++ b/index.html
@@ -1,85 +1,152 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" href="homeStyles.css">
-      <title>FUTURE</title>
-      <link rel="icon" href="S.PNG">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  </head>
-
-  <body>
-    <div class=NavSector style='background-color: #212121'>
-        <h1 id=ProjectFutureTitle style='background-color: #212121'><a style="text-decoration:none" href="Experience.html"><i>PROJECT FUTURE</i></a></h1>
-
-    
-    </div>
-
-
-    <div class=SectorMain>
-        <h1 id=DedicatedTitle>Dedicated to The Provision of Resources </h1>
-
-        <h1 id=DedicatedParagraph>Project Future works to provide a Database of Resources for High School students to help them Suceed. Join Us Today For Free! </h1>
-        <div>
-          <button class=button type="button">Become a Member</button>
-          </div>
-    </div>
-
-
-    <div class=Navsector1 style='background-color: white'>
-      <div class="row">
-        <div class="column">
-          <img class="roundimage" src="picture1.jpg">
-          <div class="textModes1"><i><b>CLUBS</b></i></div>
-        </div>
-
-        <div class="column">
-          <img class="roundimage" src="picture2.jpg">
-          <div class="textModes1"><i><b>SAT/ACT</b></i></div>
-        </div>
-
-        <div class="column">
-          <img class="roundimage" src="picture5.jpg">
-          <div class="textModes1"><i><b>FORUM</b></i></div>
-        </div>
-      </div>
-    </div>
-
-    <div class=Navsector2 style='background-color: white'>
-      <div class="row">
-        <div class="column">
-        <img class="roundimage" src="picture3.jpg" >
-        <div class="textModes2"><i><b>INTERNSHIPS</b></i></div>
-        </div>
-
-        <div class="column">
-        <img class="roundimage" src="picture4.jpg" >
-        <div class="textModes3"><i><b>COLLEGES</b></i></div>
-        </div>
-
-        <div class="column">
-        <img class="roundimage" src="picture6.jpg" >
-        <div class="textModes3"><i><b>PROGRAMS</b></i></div>
-        </div>
-      </div>
-    </div>
-
-
-    <div class=sectors style='background-color: #1c2e4a'>
-        <div class=sector2 style='background-color: #1c2e4a'>
-            <img class= interestingimages src="dedicated.svg" style='background-color: #ededed'  />
-        </div>
-
-        <div class=sector1 style='background-color: #1c2e4a'>
-          <h1 class= headers style='background-color: #1c2e4a'><i>GET INVOLVED</i></h1>
-          <p class= interestingtext style='background-color: #1c2e4a'> With our resources and guidance, you can easily start or join clubs/activities in your area</p>
-          <p class= textlink style='background-color: #1c2e4a'>Learn More</p>
-        </div>
-
+<head>
+    <link rel="stylesheet" href="homeStyles1.css">
+    <title>Srivatsav Bendi</title>
+    <link rel="icon" href="s.PNG">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+    <div class=sector style='background-color: #000000'>
         
+        <span class="navL"><a href="https://www.linkedin.com/in/srivatsav-bendi-ab99a5193/"><img class=logoimages src="sb1.png" ></a></span>
+        <span class=nav9 style='background-color: #000000'><a style="text-decoration:none" href="Experience.html">Resume </a></span>
+        <span class=nav9 style='background-color: #000000'><a style="text-decoration:none" href="Experience.html">Experience </a></span>
+        <span class=nav9 style='background-color: #000000'><a style="text-decoration:none" href="Creations.html">Creations</a></span>
+        <span class=nav9 style='background-color: #000000'><a style="text-decoration:none" href="Interests.html"> Interests</a></span>
+        <span class=nav9 style='background-color: #000000'><a style="text-decoration:none" href="Articles.html">Articles</a></span>
+
+        <!-- 
+
+        <span class="navL"><a href="https://www.instagram.com/srivatsavbendi/"><img src="instagram.png" ></a></span>
+
+        <span class="navL"><a href="https://twitter.com/SrivatsavBendi"><img src="twitterLogo.png" ></a></span>
+    -->
+    </div>
+
+    <div class=sectors style='background-color: #000000'>
+        <div class=sector1 style='background-color: #000000'>
+          <h1 class= headers style='background-color: #000000'><i>Srivatsav Bendi</i></h1>
+          <p class= sectortext style='background-color: #000000'><i>Aspiring Computer Scientist and Entrepeneur</i></p>
+        </div>
+
+        <div class=sector2 style='background-color: #000000'>
+            <img class= sectorimages src="srivatsavspace.svg" style='background-color: #ededed'  />
+
+        </div>
+    </div>
+
+    <div class=skillsbar style='background-color: #FFFFFF'>
+        <div class=skills style='background-color: #FFFFFF'>
+            <img class= skillpic src="leader.svg" style='background-color: #FFFFFF'  />
+            <h1 class= skillname style='background-color: #FFFFFF'><i>Leader</i></h1>
+        </div>
+        <div class=skills style='background-color: #FFFFFF'>
+            <img class= skillpic src="creator.svg" style='background-color: #FFFFFF'  />
+            <h1 class= skillname style='background-color: #FFFFFF'><i>Creator</i></h1>
+        </div>
+        <div class=skills style='background-color: #FFFFFF'>
+            <img class= skillpic src="volunteer.svg" style='background-color: #FFFFFF'  />
+            <h1 class= skillname style='background-color: #FFFFFF'><i>Volunteer</i></h1>
+        </div>
+        <div class=skills style='background-color: #FFFFFF'>
+            <img class= skillpic src="student.svg" style='background-color: #FFFFFF'  />
+            <h1 class= skillname2 style='background-color: #FFFFFF'><i>Student</i></h1>
+        </div>
+    </div>
+
+    <!--
+    <div class=sectorinfo style='background-color: #FFFFFF'>
+        <img class= infoimages src="michigan.jpg" style='background-color: #ededed'  />
+        <h1 class=centered >Who Am I?</h1>
+        <hr class=centered >
+        <p class=centered >haijsiakns</p>
+    </div>
+-->
+    <div class="container" style='background-color: #000000'>
+        <img class=infoimages src="michigan.jpg" alt="Snow">
+
+        <div class="centerheader"><strong>Who Am I?</strong></div>
+
+        <div class="centerline"><hr style="width:15%;text-align:center;"></div>
+
+        <div class="centertext">As a sophmore attending Troy High School, I've been dedicated to giving back to the community that has given me so much. During my time growing up in the Troy community, I have been highly involved in many clubs/activities: TSA, Economics, FIRST robotics, The Troy Colt Marching Band, and Science Olympiad. I have also fueled my passion for computer science with many innovative programming projects. This is a digital portfolio of my life and what I've been able to achieve so far. After viewing this website, you will hopefully have a better understanding of me as an individual.</div>
+    </div>
+
+    <div class=sectors2 style='background-color: #000000'>
+        <div class=sector3 style='background-color: #c92522'>
+            <div class="container1">
+                <img class=infoimages src="ftc.jpg" alt="Snow" style="opacity: 15%">
+
+                <div class="activeheader"><strong>Mentoring Robotics Students</strong></div>
+
+                <div class="activeline"><hr style="width:100%;"></div>
+
+                <div class="activetext"> I have been highly involved with helping and mentoring local FTC robotics teams with funding acquisition and programming logic.</div>
+            </div>
+        </div>
+
+        <div class=sector4 style='background-color: #3f0f3fff'>
+            <div class="container1">
+                <img class=infoimages src="youtube.png" alt="Snow" style="opacity: 100%">
+
+                <div class="activeheader"><strong>Teaching and Influencing Online</strong></div>
+
+                <div class="activeline"><hr style="width:100%;"></div>
+
+                <div class="activetext"> I designed and built a straight-forward, efficient, and free online web development course on YouTube. </div>
+            </div>
+        </div>
     </div>
 
 
 
 
-  </body>
+
+    <div class="container" style='background-color: #c58255ff'>
+        <img class=infoimages src="peace.png" alt="Snow">
+
+        <div class="centerheader2"><strong>Spreading PEACE</strong></div>
+
+        <div class="centerline2"><hr style="width:15%;text-align:center;"></div>
+
+        <div class="centertext2">As a director of the PEACE Syndicate, I have volunteered and worked towards the common goal of spreading peace and prosperity for people all over the world. We have worked on projects raising money and funds to better the medical standards of refugees stranded at camps, help high school students suffering from depression, and provide students with an easy-to-access database of information related to education and college selections. </div>
+    </div>
+
+
+
+
+
+    <div class=sectors2 style='background-color: #000000'>
+        <div class=sector3 style='background-color: #0f3923'>
+            <div class="container1">
+                <img class=infoimages src="ftc.jpg" alt="Snow" style="opacity: 0%">
+
+                <div class="activeheader"><strong>Developing Modern Websites</strong></div>
+
+                <div class="activeline"><hr style="width:100%;"></div>
+
+                <div class="activetext">By learning and implementing multiple website languages and designs, I've built modern and stylistic web pages.</div>
+            </div>
+        </div>
+
+        <div class=sector4 style='background-color: #01393cff'>
+            <div class="container1">
+                <img class=infoimages src="smartech.png" alt="Snow" style="opacity: 100%">
+
+                <div class="activeheader"><strong>Researching SmartTech</strong></div>
+
+                <div class="activeline"><hr style="width:100%;"></div>
+
+                <div class="activetext"> With the help of python libraries and APIs, I've researched and built user-based smart displays</div>
+            </div>
+        </div>
+    </div>
+
+    <div class=sectorTrademark style="background-color: #FFFFFF">
+        <h1 class=trademarkText style="background-color: #FFFFFF"><strong>© Srivatsav Bendi 2020</strong></h1>
+    </div>
+
+</body>
 </html>
+
