--- a/index.html
+++ b/index.html
@@ -1,152 +1,80 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <link rel="stylesheet" href="homeStyles1.css">
-    <title>Srivatsav Bendi</title>
-    <link rel="icon" href="s.PNG">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body>
-    <div class=sector style='background-color: #000000'>
-        
-        <span class="navL"><a href="https://www.linkedin.com/in/srivatsav-bendi-ab99a5193/"><img class=logoimages src="sb1.png" ></a></span>
-        <span class=nav9 style='background-color: #000000'><a style="text-decoration:none" href="Experience.html">Resume </a></span>
-        <span class=nav9 style='background-color: #000000'><a style="text-decoration:none" href="Experience.html">Experience </a></span>
-        <span class=nav9 style='background-color: #000000'><a style="text-decoration:none" href="Creations.html">Creations</a></span>
-        <span class=nav9 style='background-color: #000000'><a style="text-decoration:none" href="Interests.html"> Interests</a></span>
-        <span class=nav9 style='background-color: #000000'><a style="text-decoration:none" href="Articles.html">Articles</a></span>
+	<head>
+      <title></title>
+      <link rel="stylesheet" href="Styles1.css">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
+	</head>
 
-        <!-- 
+	<style>
+		body {
+  			font-family: "comfortaa";
+		}
+	</style>
+	<body>
 
-        <span class="navL"><a href="https://www.instagram.com/srivatsavbendi/"><img src="instagram.png" ></a></span>
+		<div id=navbar>	
+			<a href="index.html"><span class=title><img id=logo src="logo1.png"></span></a>
+			<a href="clubs.html"><span class=title>Clubs</span></a>
+			<span class=title>SAT/ACT</span>
+			<a href="programs.html"><span class=title>Programs</span></a>
+			<span class=title>Colleges</span>
+			<span class=title1>Forum</span>
+			<span id=login>Login</span>
+			<button id="signup">Sign Up</button>
 
-        <span class="navL"><a href="https://twitter.com/SrivatsavBendi"><img src="twitterLogo.png" ></a></span>
-    -->
-    </div>
+		</div>
 
-    <div class=sectors style='background-color: #000000'>
-        <div class=sector1 style='background-color: #000000'>
-          <h1 class= headers style='background-color: #000000'><i>Srivatsav Bendi</i></h1>
-          <p class= sectortext style='background-color: #000000'><i>Aspiring Computer Scientist and Entrepeneur</i></p>
-        </div>
+		<div id=mainDiv1>
+			<div class="container">
+				<img class=mainimage src="mountain.png">
+                <div class="activeheader"><strong>Project Future</strong></div>
+                <div class="activetext"><strong>Paving the path for the education of the future</strong></div>
+            </div>
+		</div>
 
-        <div class=sector2 style='background-color: #000000'>
-            <img class= sectorimages src="srivatsavspace.svg" style='background-color: #ededed'  />
 
-        </div>
-    </div>
+		<div id=iconDiv>
+			<h3 id=icontitle>Why Project Future?</h3>
+			<h3 id=icondescription>Project Future is used by students, coaches, teachers, parents, and anyone else interested in improving their or their child's educational success!</h3>
+		</div>
 
-    <div class=skillsbar style='background-color: #FFFFFF'>
-        <div class=skills style='background-color: #FFFFFF'>
-            <img class= skillpic src="leader.svg" style='background-color: #FFFFFF'  />
-            <h1 class= skillname style='background-color: #FFFFFF'><i>Leader</i></h1>
-        </div>
-        <div class=skills style='background-color: #FFFFFF'>
-            <img class= skillpic src="creator.svg" style='background-color: #FFFFFF'  />
-            <h1 class= skillname style='background-color: #FFFFFF'><i>Creator</i></h1>
-        </div>
-        <div class=skills style='background-color: #FFFFFF'>
-            <img class= skillpic src="volunteer.svg" style='background-color: #FFFFFF'  />
-            <h1 class= skillname style='background-color: #FFFFFF'><i>Volunteer</i></h1>
-        </div>
-        <div class=skills style='background-color: #FFFFFF'>
-            <img class= skillpic src="student.svg" style='background-color: #FFFFFF'  />
-            <h1 class= skillname2 style='background-color: #FFFFFF'><i>Student</i></h1>
-        </div>
-    </div>
+		<div id=iconsDiv>
+			<div class=icons>
+				<img class=iconimages src="middleschoolmodern.png">
+				<p class=icontext >Middle School</p>
+			</div>
 
-    <!--
-    <div class=sectorinfo style='background-color: #FFFFFF'>
-        <img class= infoimages src="michigan.jpg" style='background-color: #ededed'  />
-        <h1 class=centered >Who Am I?</h1>
-        <hr class=centered >
-        <p class=centered >haijsiakns</p>
-    </div>
+			<div class=icons>
+				<img class=iconimages src="highschoolmodern.png">
+				<p class=icontext >High School</p>
+			</div>
+
+			<div class=icons>
+				<img class=iconimages src="universitymodern.png">
+				<p class=icontext >University</p>
+			</div>
+		</div>
+<!--
+		<div class=platformDiv>
+			<h3 id=platformtitle>More Than A Platform</h3>
+			<h3 id=platformdescription>Project Future is more than just a platform. Its a community. Connect and leanr from people all over the world</h3>
+			
+		</div>
+		-->
+
+		<img src="connect.svg">
+		<img src="devices.svg">
+
+			
+
+
+<!--
+			<h3 id=icontitle>Now available on all devices!</h3>
 -->
-    <div class="container" style='background-color: #000000'>
-        <img class=infoimages src="michigan.jpg" alt="Snow">
-
-        <div class="centerheader"><strong>Who Am I?</strong></div>
-
-        <div class="centerline"><hr style="width:15%;text-align:center;"></div>
-
-        <div class="centertext">As a sophmore attending Troy High School, I've been dedicated to giving back to the community that has given me so much. During my time growing up in the Troy community, I have been highly involved in many clubs/activities: TSA, Economics, FIRST robotics, The Troy Colt Marching Band, and Science Olympiad. I have also fueled my passion for computer science with many innovative programming projects. This is a digital portfolio of my life and what I've been able to achieve so far. After viewing this website, you will hopefully have a better understanding of me as an individual.</div>
-    </div>
-
-    <div class=sectors2 style='background-color: #000000'>
-        <div class=sector3 style='background-color: #c92522'>
-            <div class="container1">
-                <img class=infoimages src="ftc.jpg" alt="Snow" style="opacity: 15%">
-
-                <div class="activeheader"><strong>Mentoring Robotics Students</strong></div>
-
-                <div class="activeline"><hr style="width:100%;"></div>
-
-                <div class="activetext"> I have been highly involved with helping and mentoring local FTC robotics teams with funding acquisition and programming logic.</div>
-            </div>
-        </div>
-
-        <div class=sector4 style='background-color: #3f0f3fff'>
-            <div class="container1">
-                <img class=infoimages src="youtube.png" alt="Snow" style="opacity: 100%">
-
-                <div class="activeheader"><strong>Teaching and Influencing Online</strong></div>
-
-                <div class="activeline"><hr style="width:100%;"></div>
-
-                <div class="activetext"> I designed and built a straight-forward, efficient, and free online web development course on YouTube. </div>
-            </div>
-        </div>
-    </div>
 
 
 
+	</body>
 
-
-    <div class="container" style='background-color: #c58255ff'>
-        <img class=infoimages src="peace.png" alt="Snow">
-
-        <div class="centerheader2"><strong>Spreading PEACE</strong></div>
-
-        <div class="centerline2"><hr style="width:15%;text-align:center;"></div>
-
-        <div class="centertext2">As a director of the PEACE Syndicate, I have volunteered and worked towards the common goal of spreading peace and prosperity for people all over the world. We have worked on projects raising money and funds to better the medical standards of refugees stranded at camps, help high school students suffering from depression, and provide students with an easy-to-access database of information related to education and college selections. </div>
-    </div>
-
-
-
-
-
-    <div class=sectors2 style='background-color: #000000'>
-        <div class=sector3 style='background-color: #0f3923'>
-            <div class="container1">
-                <img class=infoimages src="ftc.jpg" alt="Snow" style="opacity: 0%">
-
-                <div class="activeheader"><strong>Developing Modern Websites</strong></div>
-
-                <div class="activeline"><hr style="width:100%;"></div>
-
-                <div class="activetext">By learning and implementing multiple website languages and designs, I've built modern and stylistic web pages.</div>
-            </div>
-        </div>
-
-        <div class=sector4 style='background-color: #01393cff'>
-            <div class="container1">
-                <img class=infoimages src="smartech.png" alt="Snow" style="opacity: 100%">
-
-                <div class="activeheader"><strong>Researching SmartTech</strong></div>
-
-                <div class="activeline"><hr style="width:100%;"></div>
-
-                <div class="activetext"> With the help of python libraries and APIs, I've researched and built user-based smart displays</div>
-            </div>
-        </div>
-    </div>
-
-    <div class=sectorTrademark style="background-color: #FFFFFF">
-        <h1 class=trademarkText style="background-color: #FFFFFF"><strong>© Srivatsav Bendi 2020</strong></h1>
-    </div>
-
-</body>
 </html>
-
