--- a/programs.html
+++ b/programs.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
       <title></title>
-      <link rel="stylesheet" href="clubStyles.css">
+      <link rel="stylesheet" href="programStyles.css">
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
 	</head>
 
@@ -14,7 +14,7 @@
 	<body>
 
 		<div id=navbar>	
-			<a href="index.html"><span class=title><img id=logo src="logo1.png"></span></a>
+			<a href="index.html"><span class=title><img id=logo src="logo9.png"></span></a>
 			<a href="clubs.html"><span class=title>Clubs</span></a>
 			<span class=title>SAT/ACT</span>
 			<a href="programs.html"><span class=title>Programs</span></a>
@@ -28,6 +28,8 @@
 		<div class=mountainsDiv>
 			<img class=mountains src="mountainsmaxima.png">
 		</div>
+
+		
 
 		<div id=mainDiv>
 			<div class=club>
