--- a/clubs.html
+++ b/clubs.html
@@ -58,7 +58,7 @@
 							</div>
 						</div>
 						<div class=clubImage>
-							<img class=clubimages src="recycle.jpg">
+							<img class=clubimages src="Pictures/recycle.jpg">
 						</div>
 					</div>
 				</div>		
