Pictures File Path Update

--- a/programs.html
+++ b/programs.html
@@ -14,7 +14,7 @@
 	<body>
 
 		<div id=navbar>	
-			<a href="index.html"><span class=title><img id=logo src="logo9.png"></span></a>
+			<a href="index.html"><span class=title><img id=logo src="Pictures/logo9.png"></span></a>
 			<a href="clubs.html"><span class=title>Clubs</span></a>
 			<span class=title>SAT/ACT</span>
 			<a href="programs.html"><span class=title>Programs</span></a>
@@ -26,7 +26,7 @@
 		</div>
 
 		<div class=mountainsDiv>
-			<img class=mountains src="mountainsmaxima.png">
+			<img class=mountains src="Pictures/mountainsmaxima.png">
 		</div>
 
 		
@@ -48,7 +48,7 @@
 
 					</div>
 					<div class=clubImage>
-						<img class=clubimages src="rsi.jpg">
+						<img class=clubimages src="Pictures/rsi.jpg">
 					</div>
 				</div>
 			</div>		
@@ -69,7 +69,7 @@
 
 					</div>
 					<div class=clubImage>
-						<img class=clubimages src="mandtsi.jpg">
+						<img class=clubimages src="Pictures/mandtsi.jpg">
 					</div>
 				</div>
 			</div>	
@@ -90,7 +90,7 @@
 
 					</div>
 					<div class=clubImage>
-						<img class=clubimages src="sams.png">
+						<img class=clubimages src="Pictures/sams.png">
 					</div>
 				</div>
 			</div>	
