--- a/act.html
+++ b/act.html
@@ -26,7 +26,7 @@
 		</div>
 
 		<div class=mountainsDiv>
-			<img class=mountains src="satact.svg">
+			<img class=mountains src="act.svg">
 		</div>
 
 <!--
