--- a/clubs.html
+++ b/clubs.html
@@ -26,7 +26,7 @@
 		</div>
 
 		<div class=mountainsDiv>
-			<img class=mountains src="long.svg">
+			<img class=mountains src="clubs.svg">
 		</div>
 
 
